// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/badge/demo/basic.js correctly test 1`] = `
<div>
  <span
    class="jc-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="jc-scroll-number jc-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="jc-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="jc-scroll-number jc-badge-count"
      data-show="true"
      title="0"
    >
      0
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/change.js correctly test 1`] = `
<div>
  <div>
    <span
      class="jc-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="jc-scroll-number jc-badge-count"
        data-show="true"
        title="5"
      >
        <span
          class="jc-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class="current"
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
    <div
      class="jc-btn-group"
    >
      <button
        class="jc-btn"
        type="button"
      >
        <i
          class="jcicon jcicon-minus "
        />
      </button>
      <button
        class="jc-btn"
        type="button"
      >
        <i
          class="jcicon jcicon-plus "
        />
      </button>
    </div>
  </div>
  <div
    style="margin-top:10px"
  >
    <span
      class="jc-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="jc-scroll-number jc-badge-dot"
        data-show="true"
      />
    </span>
    <span
      checked=""
      class="jc-switch jc-switch-checked"
      tabindex="0"
    >
      <span
        class="jc-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/badge/demo/dot.js correctly test 1`] = `
<div>
  <span
    class="jc-badge"
  >
    <i
      class="jcicon jcicon-notification "
    />
    <sup
      class="jc-scroll-number jc-badge-dot"
      data-show="true"
    />
  </span>
  <span
    class="jc-badge"
  >
    <i
      class="jcicon jcicon-notification "
    />
  </span>
  <span
    class="jc-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="jc-scroll-number jc-badge-dot"
      data-show="true"
    />
  </span>
</div>
`;

exports[`renders ./components/badge/demo/link.js correctly test 1`] = `
<a
  href="#"
>
  <span
    class="jc-badge"
  >
    <span
      class="head-example"
    />
    <sup
      class="jc-scroll-number jc-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</a>
`;

exports[`renders ./components/badge/demo/no-wrapper.js correctly test 1`] = `
<div>
  <span
    class="jc-badge jc-badge-not-a-wrapper"
  >
    <sup
      class="jc-scroll-number jc-badge-count jc-badge-multiple-words"
      data-show="true"
      title="25"
    >
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1200%);-webkit-transform:translateY(-1200%);transform:translateY(-1200%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class="current"
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="jc-badge jc-badge-not-a-wrapper"
  >
    <sup
      class="jc-scroll-number jc-badge-count"
      data-show="true"
      style="background-color:#fff;color:#999;box-shadow:0 0 0 1px #d9d9d9 inset"
      title="4"
    >
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1400%);-webkit-transform:translateY(-1400%);transform:translateY(-1400%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class="current"
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="jc-badge jc-badge-not-a-wrapper"
  >
    <sup
      class="jc-scroll-number jc-badge-count jc-badge-multiple-words"
      data-show="true"
      style="background-color:#52c41a"
      title="109"
    >
      99+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/overflow.js correctly test 1`] = `
<div>
  <span
    class="jc-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="jc-scroll-number jc-badge-count jc-badge-multiple-words"
      data-show="true"
      title="99"
    >
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="jc-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="jc-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="jc-scroll-number jc-badge-count jc-badge-multiple-words"
      data-show="true"
      title="100"
    >
      99+
    </sup>
  </span>
  <span
    class="jc-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="jc-scroll-number jc-badge-count jc-badge-multiple-words"
      data-show="true"
      title="99"
    >
      10+
    </sup>
  </span>
  <span
    class="jc-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="jc-scroll-number jc-badge-count jc-badge-multiple-words"
      data-show="true"
      title="1000"
    >
      999+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/status.js correctly test 1`] = `
<div>
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-success"
    />
    <span
      class="jc-badge-status-text"
    />
  </span>
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-error"
    />
    <span
      class="jc-badge-status-text"
    />
  </span>
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-default"
    />
    <span
      class="jc-badge-status-text"
    />
  </span>
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-processing"
    />
    <span
      class="jc-badge-status-text"
    />
  </span>
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-warning"
    />
    <span
      class="jc-badge-status-text"
    />
  </span>
  <br />
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-success"
    />
    <span
      class="jc-badge-status-text"
    >
      Success
    </span>
  </span>
  <br />
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-error"
    />
    <span
      class="jc-badge-status-text"
    >
      Error
    </span>
  </span>
  <br />
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-default"
    />
    <span
      class="jc-badge-status-text"
    >
      Default
    </span>
  </span>
  <br />
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-processing"
    />
    <span
      class="jc-badge-status-text"
    >
      Processing
    </span>
  </span>
  <br />
  <span
    class="jc-badge jc-badge-status jc-badge-not-a-wrapper"
  >
    <span
      class="jc-badge-status-dot jc-badge-status-warning"
    />
    <span
      class="jc-badge-status-text"
    >
      Warning
    </span>
  </span>
</div>
`;
